# neat

./: CMakeLists.txt  file  neat-config.cmake
include/: CMakeLists.txt  ml.hpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  genetic.cpp  neural_network.cpp
